Current:
  * Debug: A monitor for the xml communication between maxima and wxMaxima

15.08:
  * Compatibility with maxima 5.37.0
  * MathJAX now provides scaleable equations and extended drag-and-drop for the html export.
  * The table-of-contents-sidebar now shows the current cursor position
  * Fixed a few instances of cursors jumping out of the screen
  * Fixed a few instances of cursors jumping to the beginning or end of the worksheet
  * Better detection which cell maxima is processing and if it still is doing so
  * Regression: Hiding the toolbar didn't work on some systems
  * Markdown support for <=, >=, <=>, <-, ->, <->, => and +/- symbols.
  * An option to not export maxima's input as well as the output.
  * An option to use High-resolution bitmaps for the HTML export.
  * Images that are too big for the window now are displayed in a scaled-down version.
  * Fixed the support for out-of-tree-bulds that was broken in 15.04
  * Meaningful ALT texts for the HTML export to provide accessibility
  * An option to include the .wxmx file in the .html export
  * Performance fixes that are espectionally effective for MSW
  * Unification of some platform-specific code
  * bash autocompletion
  * A fourth sectioning level
  * Made entering uppercase greek letters easier and documented how to input special
	unicode symbols
  * Syntax highlighting in code cells
  * Automatic highlighting of text equal to the currrently selected one.
  * A batch mode that pauses evaluation if maxima asks a question.
  * A "halt on error" feature
  * Now evaluation of a new command is only triggered if evaluation of the last
	command has finished. This means that output from maxima is always appended
	to the right cell.
  * Un-broke error and question handling for multiple commands per cell. Sincewe now send
	maxima's input command-per-command this means a cell with multiple commands is no
	more evaluated faster than multiple cells with single commands each.