@@ -1,5 +1,6 @@
 Current:
   * Debug: A monitor for the xml communication between maxima and wxMaxima
+  * Efficient handling of big and jpeg-encoded images.
 
 15.08:
   * Compatibility with maxima 5.37.0
